--- a/.github/workflows/level1-practice.yaml
+++ b/.github/workflows/level1-practice.yaml
@@ -5,7 +5,7 @@ jobs:
      runs-on: ubuntu-latest
 
      steps:
-        - name: step 1
-          run: echo "Hello Github Actions"
-        - name: step 2 
-          run: pwd 
+        - name: checkout code 
+          uses: actions/checkout@v4
+        - name: list files
+          run: ls -la 
