--- a/.github/workflows/level1-practice.yaml
+++ b/.github/workflows/level1-practice.yaml
@@ -14,7 +14,7 @@ jobs:
         - name: List files in repository 
           run: ls -la 
         - name: Number of files 
-          run: wc -l
+          run: find . -type f | wc -l
         - name: show OS details 
           run: uname -a 
 
